--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -3,3 +3,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+    overflow: -moz-scrollbars-none;
+    /* Firefox */
+    -ms-overflow-style: none;
+    /* Internet Explorer and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+}
+
+html::-webkit-scrollbar {
+    display: none;
+    /* WebKit-based browsers */
+}
+
+@layer base {
+  :root {
+        --radius: 0.5rem
+    }
+}
