--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -4,7 +4,7 @@
 @tailwind components;
 @tailwind utilities;
 
-*,html {
+html {
     overflow: -moz-scrollbars-none;
     /* Firefox */
     -ms-overflow-style: none;
@@ -21,6 +21,38 @@ html::-webkit-scrollbar {
 @layer base {
     :root {
         --radius: 0.5rem
+    }
+}
+
+.bubble {
+    border: 1px solid rgba(173, 216, 230, 0.5);
+    border-radius: 50%;
+    position: absolute;
+    animation: animate linear infinite;
+    z-index: 10;
+    background-color: rgba(173, 216, 230, 0.05);
+    box-shadow: 0 0 5px rgba(173, 216, 230, 0.2);
+}
+
+.dot {
+    height: 5px;
+    width: 5px;
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.5);
+    position: absolute;
+    top: 20%;
+    right: 20%;
+    transform: translate(-50%, -50%);
+    box-shadow: 0 0 3px rgba(255, 255, 255, 0.3);
+}
+
+@keyframes animate {
+    0% {
+        transform: scale(0.3) translateY(0) rotate(0deg);
+    }
+
+    100% {
+        transform: scale(1.1) translateY(-100vh) rotate(360deg);
     }
 }
 
